--- a/style.css
+++ b/style.css
@@ -20,3 +20,27 @@ body {
   display: flex;
   flex-direction: column;
 }
+
+.content {
+  flex: 1 0 auto;
+}
+
+.container {
+  width: 90%;
+  margin: 0 auto;
+  overflow: none;
+}
+
+.app-header {
+  background: var(--primary-color);
+  box-shadow: 3px 3px 10px #888888;
+}
+
+.app-header .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: space-between; */
+  justify-content: center;
+  padding: 15px 10px;
+}
